# vibegate

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-05-15-vibegate-mvp.md  2026-05-19-vibegate-10x-implementation.md
docs/research/: 10x-security-baseline-best-practices.md
src/vibegate/: __init__.py  cli.py  models.py  profiles.py  scanner.py
src/vibegate/rules/: deployment.py  frontend.py  python_backend.py  secrets.py  telegram.py  webhooks.py
tests/: test_cli.py  test_models.py  test_profiles.py  test_scanner.py
tests/rules/: test_deployment.py  test_frontend.py  test_python_backend.py  test_secrets.py  test_telegram.py  test_webhooks.py
